lang/checker/tests/cases/pass/call-expression/nested.slt
local callback = function() -> () -> string
	return function()
		return "Hi"
	end
end
local value: string = callback()()