lang/checker/tests/cases/fail/resolve-type-match/callback/excessive_param.slt
type A = () -> void
local callback: A = function(value: string)
end